# 1d-euler-solvers

./: CMakeLists.txt  main.cpp
Common/: Solver.cpp  Solver.h  SpaceMesh.cpp  SpaceMesh.h
ExactRiemannSolver/: ExactRiemannSolver.h
HLLC/: HLLCSolver.cpp  HLLCSolver.h
Maths/: Algebra.cpp  Algebra.h
REO/: REOSolver.cpp  REOSolver.h
WENO/: WENOSolver.h
